correction alignement

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 .section-content {
     max-width: 1200px;
     padding: 0 10px;
+    margin: 0 auto;
 }
 
 h1, h2, h3 {
